# anoma

./: .build  .credo.exs  .doc-versions.js  .drone.yml  .formatter.exs  .gitignore  .gradient_ignore.exs  .iex.exs  404.html  Anoma.Block.Base.html  Anoma.Block.html  Anoma.CairoResource.Action.html  Anoma.CairoResource.ComplianceWitness.html  Anoma.CairoResource.LogicInstance.html  Anoma.CairoResource.ProofRecord.html  Anoma.CairoResource.Tree.html  Anoma.CairoResource.Utils.html  Anoma.Cli.Client.html  Anoma.Cli.html  Anoma.Client.Api.Endpoint.html  Anoma.Client.Api.ReflectionServer.html  Anoma.Client.Api.Server.html  Anoma.Client.Api.Servers.Mempool.html  Anoma.Client.Api.Servers.Nock.html  Anoma.Client.Application.html  Anoma.Client.CLI.html  Anoma.Client.Connection.GRPCProxy.html  Anoma.Client.Connection.Supervisor.html  Anoma.Client.Connection.TCP.html  Anoma.Client.Examples.EClient.EConnection.html  Anoma.Client.Examples.EClient.html  Anoma.Client.Examples.EProve.html  Anoma.Client.Examples.EProxy.html  Anoma.Client.Runner.html  Anoma.Client.html  Anoma.Configuration.html  Anoma.Constants.html  Anoma.Crypto.Encrypt.html  Anoma.Crypto.Id.Extern.html  Anoma.Crypto.Id.Intern.html  (+314 more)
anoma/: index.html
anoma_shared/: all.html  sidebar-items.js
anoma_vm_env/: sidebar-items.js
anoma_vm_macro/: attr.transaction.html  attr.validity_predicate.html  sidebar-items.js
anomac/: index.html  sidebar-items.js
anoman/: fn.main.html  index.html  sidebar-items.js
apps/: Cargo.toml  build.rs  rust-nightly-version
apps/anoma_lib/lib/examples/e_risc0/trivial_logic_example/methods/guest/: Cargo.toml
apps/anoma_lib/lib/examples/e_risc0/trivial_logic_example/methods/guest/src/: main.rs
archive/: domain-name-addresses.html  index.html
assets/: tailwind.config.js
config/: config.exs  dev.exs  iex.exs  prod.exs  runtime.exs  test.exs
documentation/: CONTRIBUTING.livemd  analysis.livemd  contributing.livemd  hoon.livemd  index.livemd  index_docs.livemd  jam.livemd  logging.livemd  toc.livemd  user.livemd  visualization.livemd  vm_interface.livemd
e2e-test.58e3db4aa90f62c0b1fe7/: print.html
explore/: index.html
genesis/: dev.toml  e2e-tests-single-node.toml
hoon/: anoma.hoon  logics.hoon  resource-machine.hoon  tests.hoon
idl/: anoma.proto
lib/: anoma.ex  anoma_web.ex  application.ex  commitment_tree.ex  event_broker.ex  livebook.ex  mailer.ex  mapsetmap.ex  nock.ex  noun.ex  serialised_struct.ex  taiga.ex  types.ex  webview.ex
master/: 404.html  index.html  print.html  quick-start.html  searchindex.js  searchindex.json
native/cairo/: Cargo.toml  README.md  fibonacci_5.cairo  fibonacci_5.json
native/cairo/src/: lib.rs
native/cairo1/: Cargo.toml  README.md  sierra_program
native/cairo1/src/: lib.rs
native/nif_taiga/: Cargo.toml  README.md
native/nif_taiga/src/: lib.rs
nix/: crate-overrides.nix
params/: cairo_compliance.json  cairo_compliance_input.json  compliance.juvix  trivial_resource_logic.juvix
playnet/: index.html
proof_of_stake/: Cargo.toml
proof_of_stake/src/: btree_set.rs  epoched.rs  lib.rs  parameters.rs  types.rs  validation.rs
rustdoc/: crates.js  search-index.js  settings.html  source-files.js
scripts/: anomac  copy-dylibs.zsh  copy-sos.sh  docs-files.sh  docs-version.sh  docs.sh
shared/: Cargo.toml  build.rs
specs/: encoding.html  index.html  ledger.html  overview.html
test/: anoma_test.exs  block_test.exs  cairo_test.exs  client_test.exs  commitment_tree_test.exs  communicator_test.exs  crypto_test.exs  event_broker_test.exs  identity_test.exs  intent_test.exs  logic_test.exs  nock_test.exs  node_test.exs  noun_test.exs  partialtx_test.exs  poseidon_test.exs  resource_test.exs  rpc_test.exs  serialisation.exs  serialisation_test.exs  shielded_transaction_test.exs  storage_test.exs  tcpserver_test.exs  test_helper.exs  transaction_test.exs
tests/: Cargo.toml
tx_prelude/: Cargo.toml
user-guide/: ledger.html
v0.1.6/: 404.html  searchindex.js  searchindex.json
v0.14.0/: .doc-versions.js
v0.15.0/: .doc-versions.js
v0.16.0/: .doc-versions.js
v0.17.0/: .doc-versions.js
v0.18.0/: .doc-versions.js
v0.19.0/: .doc-versions.js
v0.2.0/: print.html  searchindex.js  searchindex.json
v0.22.0/: .doc-versions.js
v0.24.0/: .doc-versions.js
v0.25.0/: .build  .doc-versions.js  404.html  Anoma.Client.Api.Endpoint.html  Anoma.Client.Application.html  Anoma.Client.Connection.GRPCProxy.html  Anoma.Client.Connection.TCP.html  Anoma.Client.Examples.EClient.EConnection.html  Anoma.Client.Examples.EClient.html  Anoma.Client.Examples.EProxy.html  Anoma.Constants.html  Anoma.Crypto.Randomness.html  Anoma.Crypto.Sign.html  Anoma.Crypto.Symmetric.html  Anoma.Node.DummyStorage.html  Anoma.Node.Examples.EIntentPool.html  Anoma.Node.Examples.ENode.html  Anoma.Node.Examples.ESolver.html  Anoma.Node.Examples.ETransport.ETcp.Context.html  Anoma.Node.Intents.IntentPool.NullifierFilter.html  Anoma.Node.Intents.IntentPool.html  Anoma.Node.Logging.LoggingFilter.html  Anoma.Node.Logging.html  Anoma.Node.Registry.Address.html  Anoma.Node.Registry.html  Anoma.Node.Supervisor.html  Anoma.Node.Transaction.Backends.ForMempoolFilter.html  Anoma.Node.Transaction.Backends.NullifierEvent.html  Anoma.Node.Transaction.Backends.ResultEvent.html  Anoma.Node.Transaction.Backends.html  Anoma.Node.Transaction.Executor.ExecutionEvent.html  Anoma.Node.Transaction.Mempool.BlockEvent.html  Anoma.Node.Transaction.Mempool.ConsensusEvent.html  Anoma.Node.Transaction.Mempool.Tx.html  Anoma.Node.Transaction.Ordering.OrderEvent.html  Anoma.Node.Transaction.Ordering.html  Anoma.Node.Transaction.Storage.HeightFilter.html  Anoma.Node.Transaction.Storage.html  Anoma.Node.Transport.EngineProxy.html  Anoma.Node.Transport.GRPC.Server.html  (+60 more)
v0.26.0/: .build  .doc-versions.js  404.html  Anoma.Client.CLI.html  (+156 more)
vm_env/: Cargo.toml
vm_env/src/: eth_bridge.rs  governance.rs  ibc.rs  imports.rs  intent.rs  lib.rs  nft.rs  proof_of_stake.rs  token.rs
vm_env/src/key/: ed25519.rs
vp_prelude/: Cargo.toml
vp_prelude/src/: error.rs  intent.rs  key.rs  lib.rs  nft.rs  token.rs
(+46576 files in other folders)
