[workspace]
resolver = "2"

members = [
  "apps",
  "matchmaker/mm_token_exch",
  "proof_of_stake",
  "shared",
  "tests",
  "macros",
]

# wasm packages have to be built separately
exclude = [
  "vm_env",
  "matchmaker/mm_template",
  "wasm",
  "wasm_for_tests",
  "vp_prelude",
  "tx_prelude",
]

[patch.crates-io]
tracing = {git = "https://github.com/tokio-rs/tracing/", rev = "6cc6c47354ceeb47da7c95faa41c6d29b71b5f37"}
tracing-core = {git = "https://github.com/tokio-rs/tracing/", rev = "6cc6c47354ceeb47da7c95faa41c6d29b71b5f37"}
tracing-subscriber = {git = "https://github.com/tokio-rs/tracing/", rev = "6cc6c47354ceeb47da7c95faa41c6d29b71b5f37"}

[profile.release]
lto = true
opt-level = 3
panic = "unwind"
