[package]
authors = ["Heliax AG <hello@heliax.dev>"]
description = "Anoma apps"
edition = "2018"
license = "GPL-3.0"
name = "proof_of_stake"
readme = "../README.md"
resolver = "2"
version = "0.1.0"

[dependencies]

[dev-dependencies]
proptest = {git = "https://github.com/heliaxdev/proptest", branch = "tomas/state-machine"}
# proptest = {path = "../../proptest/proptest"}
