[package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
name = "anoma_vm_env"
resolver = "2"
version = "0.4.0"

[features]
default = ["ABCI", "masp"]

ABCI = [
  "anoma/ABCI",
]

ABCI-plus-plus = [
  "anoma/ABCI-plus-plus",
]

masp = ["bellman", "masp_primitives"]

[dependencies]
anoma = {path = "../shared", default-features = false}
anoma_macros = {path = "../macros"}
bellman = {version = "0.11.1", optional = true}
borsh = "0.9.0"
jubjub = { version = "0.8"}
bls12_381 = { version = "0.6"}
#libmasp = { git = "https://github.com/murisi/masp", branch = "murisi/masp-transaction3" }
masp_primitives = { git = "https://github.com/murisi/masp", branch = "murisi/masp-transaction3" }
masp_proofs = { git = "https://github.com/murisi/masp", branch = "murisi/masp-transaction3" }
bellman = { version = "0.11.1", features = ["groth16"] }
ff = { version = "0.11" }
