[package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
name = "anoma_vm_env"
resolver = "2"
version = "0.6.1"

[features]
default = ["ABCI"]

ABCI = [
  "anoma/ABCI",
  "anoma/ibc-vp-abci",
]

ABCI-plus-plus = [
  "anoma/ABCI-plus-plus",
  "anoma/ibc-vp",
]

[dependencies]
anoma = {path = "../shared", default-features = false}
anoma_macros = {path = "../macros"}
borsh = "0.9.0"
#libmasp = { git = "https://github.com/anoma/masp", branch = "murisi/masp-incentive" }
masp_primitives = { git = "https://github.com/anoma/masp", rev = "bee40fc465f6afbd10558d12fe96eb1742eee45c" }
masp_proofs = { git = "https://github.com/anoma/masp", rev = "bee40fc465f6afbd10558d12fe96eb1742eee45c" }
hex = "0.4.3"
