[package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
name = "anoma_vp_prelude"
resolver = "2"
version = "0.6.1"

[features]
default = ["ABCI"]

ABCI = [
  "anoma/ABCI",
  "anoma_vm_env/ABCI",
]

ABCI-plus-plus = [
  "anoma/ABCI-plus-plus",
  "anoma_vm_env/ABCI-plus-plus",
]

[dependencies]
anoma = {path = "../shared", default-features = false}
anoma_vm_env = {path = "../vm_env", default-features = false}
anoma_macros = {path = "../macros"}
borsh = "0.9.0"
sha2 = "0.10.1"
thiserror = "1.0.30"
