[package]
name = "trivial_logic"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
aarm_core = { git = "https://github.com/anoma/aarm-risc0/", package = "aarm_core", rev = "68249df097c3fc37b0675827d974dd04f5a9d245" }
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
